# SpinPointTBot

./: .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
main/: __init__.py  settings.py
main/exceptions/: base_exception.py
main/handlers/: main_handlers.py
main/services/: base_service.py
main/services/schemas/: base_schema.py
users/exceptions/: user_exceptions.py
users/mock_data/: rating.py  role.py
users/services/: user_service.py
users/services/enums/: role_enum.py  user_enum.py
users/services/schemas/: rating.py  role.py  user.py
