[tool.poetry]
name = "spinpointtbot"
version = "0.1.0"
description = ""
authors = ["Dzmitry Yakimchuk <dzmitry.email@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.1"
pydantic-settings = "^2.6.1"
aiogram = "^3.15.0"
aiohttp = "^3.10"
pydantic-extra-types = "^2.10.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
isort = "^5.13.2"
black = "^24.4.2"
types-python-dateutil = "^2.9.0.20240316"
types-sqlalchemy-utils = "^1.1.0"
pytest = "^8.3.2"
pyproject-flake8 = "^7.0.0"
pre-commit = "^4.0.1"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# MYPY section
[tool.mypy]
exclude = [
    ".env",
    ".venv",
    ".git",
    "__pycache__"
]
plugins = [
    "pydantic.mypy",
]

# BLACK section
[tool.black]
line_length = 88

# ISORT section
[tool.isort]
profile = "black"
line_length = 88
skip = [
    ".venv",
    ".git",
    "__pycache__",
    "site-packages"
]

# FLAKE8 section
[tool.flake8]
max-line-length = 88
exclude = [
    ".venv/*",
    ".git",
    "__pycache__",
    "site-packages"
]

extend-ignore = [
    "E800",
    "E501",
    "E203",
]

# pyproject.toml
[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests",
    "unit: marks unit tests"
]
